- [TENANTS] [GUI] Prevent whitespaces in tenants' name
- [API_PARSER] [BLACKBERRY_CYLANCE] last_api_call was not correctly updated
- [API_PARSER] [BLACKBERRY_CYLANCE] Prevent last_api_call from getting stuck more thant 24h in the past
- [API_PARSER] [THREADS] Don't handle signals when code is not ran in main thread (GUI w/ gunicorn case)
### Added
- [API_PARSER] [PROOFPOINT_TRAP] New API parser Proofpoint TRAP
### Changed
- [GUI] [TLS] It's now impossible to delete a TLS profile used in a frontend or a backend (will list where it is used)
- [GUI] [SETTINGS] Improved logging configuration for GUI
- [PORTAL] [SETTINGS] Improved logging configuration for portal


## [2.2.1] - 2022-12-13
### Fixed
- [GUNICORN] [CONF] Timeout increased to 60 seconds
- [APACHE] [GUNICORN] Set 4 workers w/ 4 threads
- [API_PARSER][DEFENDER] GUI 'test' button where always returning "Success" even if credentials where wrong
### Changed
- [PORTAL] [GUNICORN] Set 4 workers w/ 4 threads
- [NGINX] [CONF] Proxy timeout increased to 5 seconds


## [2.2.0] - 2022-12-09
### Fixed
- [API_PARSER] [CROWDSTRIKE] last_api_call was not properly updated
- [SYSTEM] [CERTIFICATES] Ensure correct rights and ownerships to imported node's certificate files
- [CLUSTER] [CLUSTER_JOIN] Numerous improvements to cluster_join script, for both new node and called master
- [SYSTEM] [NET2MONGO] Allow to get network configuration from /etc/rc.conf AND /etc/rc.conf.d/network, and accept more ifconfig formats
### Added
- [OAUTH] Add 'Access-Control-Allow-Origin' header to oauth2 endpoints for API requests through SPAs
- [GUI] [SYSTEM] Add nginx in the apache jail to work as proxy and serve static files for gunicorn
- [API_PARSER] [PROOFPOINT_CASB] New api parser Proofpoint CASB
### Changed
- [GUI] [SYSTEM] Replace apache's WSGI with gunicorn to serve GUI
- [PORTAL] [SYSTEM] Run portal as non-root
### Removed
- [APACHE] Completely remove apache package and logic in code (service, handling, etc...)


## [2.1.4] - 2022-11-18