@@ -149,10 +149,10 @@
                     <div class="row method-post">
                       <div class="col-md-12">
                         <div class="form-group">
-                          <label class="col-sm-4 control-label">{{ form.post_datas.label }}</label>
+                          <label class="col-sm-4 control-label">{{ form.post_data.label }}</label>
                           <div class="col-sm-5">
-                            {{form.post_datas}}
-                            {{form.post_datas.errors|safe}}
+                            {{form.post_data}}
+                            {{form.post_data.errors|safe}}
                           </div>
                         </div>
                       </div>
